// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Container renders a rem-based container with number value 1`] = `
.c0 {
  margin-right: auto;
  margin-left: auto;
  max-width: 18.75rem;
}

<div
  className="c0"
/>
`;

exports[`Container renders with custom padding number value 1`] = `
.c0 {
  margin-right: auto;
  margin-left: auto;
  padding-right: 3.125rem;
  padding-left: 3.125rem;
  max-width: 18.75rem;
}

<div
  className="c0"
/>
`;

exports[`Container renders with no padding 1`] = `
.c0 {
  margin-right: auto;
  margin-left: auto;
  max-width: 18.75rem;
}

<div
  className="c0"
/>
`;
